--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Standards.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Standards.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Web.Mvc.Html
+@using Microsoft.ReportingServices.Interfaces
 @using SFA.Apprenticeships.Domain.Entities.Raa.Vacancies
 @using SFA.Apprenticeships.Web.Manage.Constants
 @model List<StandardSubjectAreaTierOne>
@@ -40,7 +41,7 @@
                     @Html.DisplayFor(modelItem => ssat1.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => standardSector.Name)
+                    @Html.RouteLink(standardSector.Name, ManagementRouteNames.AdminViewSector, new { standardSector.SectorId })
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => standard.Name)
