ra-402: Style the anynomus reason section and show the edit/comment link.

--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
@@ -165,3 +165,7 @@ input[type="search"]::-webkit-search-decoration {
     font-size:16px;
  }
 
+ .left-grey-border{
+    border-left: 5px solid#BFC1C3;
+    padding:12px 0 1px 15px;  
+ }
