--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main-ie8.css
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main-ie8.css
@@ -2690,6 +2690,10 @@ ul.applications-summary.bulk-response {
   color: #BFC1C3;
   font-size: 16px; }
 
+.left-grey-border {
+  border-left: 5px solid #BFC1C3;
+  padding: 12px 0 1px 15px; }
+
 html {
   font-size: 62.5%;
   /* 1 */ }
