ra-402: Add validation for anonymous fields.

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/EmployerInformation.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/EmployerInformation.cshtml
@@ -32,6 +32,11 @@
     <script type="text/javascript">
 
         $("#NumberOfPositionsJS").attr("id", "NumberOfPositions").attr("Name", "NumberOfPositions");
+
+        $("#NonAnonymousEmployerJS").attr("id", "NonAnonymousEmployer").attr("Name", "NonAnonymousEmployer");
+        $("#AnonymousEmployerJS").attr("id", "AnonymousEmployer").attr("Name", "AnonymousEmployer");
+        
+
         $("#location-type-main-location").on('click', function () {
                 $("#confirmEmployer").text("Save");
         });
