--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/EmployerDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/EmployerDetails.cshtml
@@ -66,13 +66,12 @@
                         </div>
                         <a name="@Html.NameFor(m => m.IsAnonymousEmployer).ToString().ToLower()"></a>
                             <h4 class="bold-small">Will the employer's name and address be shown in this vacancy?</h4>
-
                             <label data-target="is-non-anonymous-employer" for="is-non-anonymous-employer" class="block-label @Model.IsAnonymousEmployer ">
-                                @Html.RadioButtonFor(m => m.IsAnonymousEmployer, true, new { id = "non-anonymous-employer", aria_controls = "non-anonymous-employer" })
+                                @Html.RadioButtonFor(m => m.IsAnonymousEmployer, false, new { id = "non-anonymous-employer", aria_controls = "non-anonymous-employer" })
                                 Yes
                             </label>
                             <label data-target="is-anonymous-employer" for="is-anonymous-employer" class="block-label @Model.IsAnonymousEmployer ">
-                                @Html.RadioButtonFor(m => m.IsAnonymousEmployer, false, new { id = "anonymous-employer", aria_controls = "anonymous-employer" })
+                                @Html.RadioButtonFor(m => m.IsAnonymousEmployer, true, new { id = "anonymous-employer", aria_controls = "anonymous-employer" })
                                 No, the employer wants to remain anonymous
                             </label>
                     }
@@ -106,12 +105,12 @@
                     <h4 class="bold-small">Will the employer's name and address be shown in this vacancy?</h4>
 
                     <label data-target="is-anonymous-employer" for="is-anonymous-employer" class="block-label @Model.IsAnonymousEmployer ">
-                        @Html.RadioButtonFor(m => m.IsAnonymousEmployer, true, new { id = "anonymous-employer", aria_controls = "anonymous-employer" })
-                        Yes, this will be the vacancy location
+                        @Html.RadioButtonFor(m => m.IsAnonymousEmployer, false, new { id = "anonymous-employer", aria_controls = "anonymous-employer" })
+                        Yes
                     </label>
                     <label data-target="is-non-anonymous-employer" for="is-non-anonymous-employer" class="block-label @Model.IsAnonymousEmployer ">
-                        @Html.RadioButtonFor(m => m.IsAnonymousEmployer, false, new { id = "non-anonymous-employer", aria_controls = "non-anonymous-employer" })
-                        No, I need to add a different location
+                        @Html.RadioButtonFor(m => m.IsAnonymousEmployer, true, new { id = "non-anonymous-employer", aria_controls = "non-anonymous-employer" })
+                        No, the employer wants to remain anonymous
                     </label>
                 </div>
                 <div id="location-type-main-location-panel" class="toggle-content blocklabel-content location">
@@ -135,26 +134,23 @@
 
     <div id="is-non-anonymous-employer" class="toggle-content blocklabel-content non-anonymous">
         <div class="grid grid-1-1">
-            @Html.FormTextFor(model => model.EmployerWebsiteUrl, controlHtmlAttributes: new { type = "text", @class = "form-control-1-1" }, labelHtmlAttributes: new { @class = "bold-small" })
+            @Html.FormTextFor(model => model.EmployerWebsiteUrl, controlHtmlAttributes: new { type = "text", @class = "form-control-1-1"}, labelHtmlAttributes: new { @class = "bold-small" })
             @Html.EditorFor(m => m.EmployerWebsiteUrlComment, "Comment", Html.GetLabelFor(m => m.EmployerWebsiteUrlComment))
-            @Html.FormTextAreaFor(m => m.EmployerDescription, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;" }, labelHtmlAttributes: new { @class = "bold-small" })
+            @Html.FormTextAreaFor(m => m.EmployerDescription, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;"}, labelHtmlAttributes: new { @class = "bold-small" })
             @Html.EditorFor(m => m.EmployerDescriptionComment, "Comment", Html.GetLabelFor(m => m.EmployerDescriptionComment))
         </div>
     </div>
     <div id="is-anonymous-employer" class="toggle-content blocklabel-content anonymous">
         <div class="grid grid-1-1">
-            <div class="hgroup-small">
-                <p class="subtitle">A brief description of the employer will be needed to replace their name. For example, car manufacturer or clothing retailer. The employer's address will not be visible to candidates. Only the employer's town or city will be shown.</p>
+            <div class="hgroup-medium">
+                <p class="subtitle font-small">A brief description of the employer will be needed to replace their name. For example, car manufacturer or clothing retailer. The employer's address will not be visible to candidates. Only the employer's town or city will be shown.</p>
             </div>
-            @Html.FormTextFor(model => model.AnonymousEmployerDescription, controlHtmlAttributes: new { type = "text", @class = "form-control-1-1" }, labelHtmlAttributes: new { @class = "bold-small" })
-            @Html.EditorFor(m => m.AnonymousEmployerDescriptionComment, "Comment", Html.GetLabelFor(m => m.AnonymousEmployerDescriptionComment))
-            <div class="hgroup-small">
-                <p class="subtitle">
-                    This will help our vacancy reviewers validate the employer's request to remain anonymous. This information will not be displayed on the advert.
-                </p>
-            </div>
-            @Html.FormTextAreaFor(m => m.AnonymousEmployerReason, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;" }, labelHtmlAttributes: new { @class = "bold-small" })
+            @Html.FormTextAreaFor(model => model.AnonymousEmployerDescription, controlHtmlAttributes: new { type = "text", @class = "form-control-1-1", data_val_length_max = "40",rows=1 }, labelHtmlAttributes: new { @class = "bold-small" })
+            @Html.EditorFor(m => m.AnonymousEmployerDescriptionComment, "Comment", Html.GetLabelFor(m => m.AnonymousEmployerDescriptionComment))            
+            @Html.FormTextAreaFor(m => m.AnonymousEmployerReason, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;", data_val_length_max = "240" }, labelHtmlAttributes: new { @class = "bold-small" })
             @Html.EditorFor(m => m.AnonymousEmployerDescriptionComment, "Comment", Html.GetLabelFor(m => m.EmployerDescriptionComment))
+            @Html.FormTextAreaFor(m => m.AnonymousAboutTheEmployerDescription, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;"}, labelHtmlAttributes: new { @class = "bold-small" })
+            @Html.EditorFor(m => m.AnonymousAboutTheEmployerDescriptionComment, "Comment", Html.GetLabelFor(m => m.AnonymousAboutTheEmployerDescriptionComment))
         </div>
     </div>
 </div>
