--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/EmployerDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/EmployerDetails.cshtml
@@ -65,15 +65,15 @@
                             @Html.EditorFor(m => m.NumberOfPositionsComment, "Comment", Html.GetLabelFor(m => m.NumberOfPositionsComment))
                         </div>
                         <a name="@Html.NameFor(m => m.IsAnonymousEmployer).ToString().ToLower()"></a>
-                            <h4 class="bold-small">Will the employer's name and address be shown in this vacancy?</h4>
-                            <label data-target="is-non-anonymous-employer" for="is-non-anonymous-employer" class="block-label @Model.IsAnonymousEmployer ">
-                                @Html.RadioButtonFor(m => m.IsAnonymousEmployer, false, new { id = "non-anonymous-employer", aria_controls = "non-anonymous-employer" })
-                                Yes
-                            </label>
-                            <label data-target="is-anonymous-employer" for="is-anonymous-employer" class="block-label @Model.IsAnonymousEmployer ">
-                                @Html.RadioButtonFor(m => m.IsAnonymousEmployer, true, new { id = "anonymous-employer", aria_controls = "anonymous-employer" })
-                                No, the employer wants to remain anonymous
-                            </label>
+                        <h4 class="bold-small">Will the employer's name and address be shown in this vacancy?</h4>
+                        <label data-target="is-non-anonymous-employer-panel" for="is-non-anonymous-employer" class="block-label @Model.IsAnonymousEmployer ">
+                            @Html.RadioButtonFor(m => m.IsAnonymousEmployer, false, new { id = "is-non-anonymous-employer", aria_controls = "is-non-anonymous-employer-panel" })
+                            Yes
+                        </label>
+                        <label data-target="is-anonymous-employer-panel" for="is-anonymous-employer" class="block-label @Model.IsAnonymousEmployer ">
+                            @Html.RadioButtonFor(m => m.IsAnonymousEmployer, true, new { id = "is-anonymous-employer", aria_controls = "is-anonymous-employer-panel" })
+                            No, the employer wants to remain anonymous
+                        </label>
                     }
                     else
                     {
@@ -132,7 +132,7 @@
         </noscript>
     </div>
 
-    <div id="is-non-anonymous-employer" class="toggle-content blocklabel-content non-anonymous">
+    <div id="is-non-anonymous-employer-panel" class="toggle-content blocklabel-content non-anonymous">
         <div class="grid grid-1-1">
             @Html.FormTextFor(model => model.EmployerWebsiteUrl, controlHtmlAttributes: new { type = "text", @class = "form-control-1-1"}, labelHtmlAttributes: new { @class = "bold-small" })
             @Html.EditorFor(m => m.EmployerWebsiteUrlComment, "Comment", Html.GetLabelFor(m => m.EmployerWebsiteUrlComment))
@@ -140,7 +140,7 @@
             @Html.EditorFor(m => m.EmployerDescriptionComment, "Comment", Html.GetLabelFor(m => m.EmployerDescriptionComment))
         </div>
     </div>
-    <div id="is-anonymous-employer" class="toggle-content blocklabel-content anonymous">
+    <div id="is-anonymous-employer-panel" class="toggle-content blocklabel-content anonymous">
         <div class="grid grid-1-1">
             <div class="hgroup-medium">
                 <p class="subtitle font-small">A brief description of the employer will be needed to replace their name. For example, car manufacturer or clothing retailer. The employer's address will not be visible to candidates. Only the employer's town or city will be shown.</p>
