--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="grid grid-1-3">
-                @Html.Partial("_Apply", Model, new ViewDataDictionary { new KeyValuePair<string, object>("AnalyticsButtonPosition", "Top")})
+                @Html.Partial("_Apply", Model, new ViewDataDictionary {new KeyValuePair<string, object>("AnalyticsButtonPosition", "Top")})
             </div>
         </section>
         <section class="section-border grid-wrapper" id="vacancy-info">
@@ -122,58 +122,57 @@
             || !string.IsNullOrWhiteSpace(Model.QualificationRequired)
             || !string.IsNullOrWhiteSpace(Model.FutureProspects)
             || !string.IsNullOrWhiteSpace(Model.RealityCheck))
-         {
-             <section class="section-border grid-wrapper" id="course-info">
-                 <h2 class="heading-large">Requirements and prospects</h2>
-                 <div class="grid grid-1-2">
-                     <div class="inner-block-padr">
-                         <div class="text">
-                             @if (!string.IsNullOrWhiteSpace(Model.SkillsRequired))
-                             {
-                                 <h3 class="heading-small">Desired skills</h3>
-                                 <p id="vacancy-skills-required" class="@Model.SkillsRequired.GetPreserveFormattingCssClass()" itemprop="skills">@(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.EscapeHtmlEncoding(Html, Model.SkillsRequired))</p>
-                             }
-                             @if (!string.IsNullOrWhiteSpace(Model.PersonalQualities))
-                             {
-                                 <h3 class="heading-small">Personal qualities</h3>
-                                 <p id="vacancy-qualities-required" class="@Model.PersonalQualities.GetPreserveFormattingCssClass()" itemprop="qualities">@(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.EscapeHtmlEncoding(Html, Model.PersonalQualities))</p>
-                             }
-                             @if (!string.IsNullOrWhiteSpace(Model.QualificationRequired))
-                             {
-                                 <h3 class="heading-small">Qualifications required</h3>
-                                 <p id="vacancy-qualifications-required" class="@Model.QualificationRequired.GetPreserveFormattingCssClass()" itemprop="qualifications">@(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.EscapeHtmlEncoding(Html, Model.QualificationRequired))</p>
-                             }
+        {
+            <section class="section-border grid-wrapper" id="course-info">
+                <h2 class="heading-large">Requirements and prospects</h2>
+                <div class="grid grid-1-2">
+                    <div class="inner-block-padr">
+                        <div class="text">
+                            @if (!string.IsNullOrWhiteSpace(Model.SkillsRequired))
+                            {
+                                <h3 class="heading-small">Desired skills</h3>
+                                <p id="vacancy-skills-required" class="@Model.SkillsRequired.GetPreserveFormattingCssClass()" itemprop="skills">@(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.EscapeHtmlEncoding(Html, Model.SkillsRequired))</p>
+                            }
+                            @if (!string.IsNullOrWhiteSpace(Model.PersonalQualities))
+                            {
+                                <h3 class="heading-small">Personal qualities</h3>
+                                <p id="vacancy-qualities-required" class="@Model.PersonalQualities.GetPreserveFormattingCssClass()" itemprop="qualities">@(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.EscapeHtmlEncoding(Html, Model.PersonalQualities))</p>
+                            }
+                            @if (!string.IsNullOrWhiteSpace(Model.QualificationRequired))
+                            {
+                                <h3 class="heading-small">Qualifications required</h3>
+                                <p id="vacancy-qualifications-required" class="@Model.QualificationRequired.GetPreserveFormattingCssClass()" itemprop="qualifications">@(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.EscapeHtmlEncoding(Html, Model.QualificationRequired))</p>
+                            }
 
-                         </div>
-                     </div>
-                 </div>
-                 <div class="grid grid-1-2">
-                     <div class="text">
-                         @if (!string.IsNullOrWhiteSpace(Model.FutureProspects))
-                         {
-                             <h3 class="heading-small">Future prospects</h3>
-                             <p id="vacancy-future-prospects" class="@Model.FutureProspects.GetPreserveFormattingCssClass()" itemprop="incentives">@(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.EscapeHtmlEncoding(Html, Model.FutureProspects))</p>
-                         }
-                         @if (!string.IsNullOrWhiteSpace(Model.RealityCheck))
-                         {
-                             <h3 class="heading-small">Things to consider</h3>
-                             <p id="vacancy-reality-check" class="@Model.RealityCheck.GetPreserveFormattingCssClass()" itemprop="incentives">@(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.EscapeHtmlEncoding(Html, Model.RealityCheck))</p>
-                         }
-                     </div>
-                 </div>
-             </section>
-         }
+                        </div>
+                    </div>
+                </div>
+                <div class="grid grid-1-2">
+                    <div class="text">
+                        @if (!string.IsNullOrWhiteSpace(Model.FutureProspects))
+                        {
+                            <h3 class="heading-small">Future prospects</h3>
+                            <p id="vacancy-future-prospects" class="@Model.FutureProspects.GetPreserveFormattingCssClass()" itemprop="incentives">@(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.EscapeHtmlEncoding(Html, Model.FutureProspects))</p>
+                        }
+                        @if (!string.IsNullOrWhiteSpace(Model.RealityCheck))
+                        {
+                            <h3 class="heading-small">Things to consider</h3>
+                            <p id="vacancy-reality-check" class="@Model.RealityCheck.GetPreserveFormattingCssClass()" itemprop="incentives">@HtmlExtensions.EscapeHtmlEncoding(Html, Model.RealityCheck)</p>
+                        }
+                    </div>
+                </div>
+            </section>
+        }
         <section class="section-border" id="employer-info">
             <h2 class="heading-large">About the employer</h2>
             <div class="grid-wrapper">
                 <div class="grid grid-2-3">
                     <div class="inner-block-padr">
-                        @if (!Model.IsEmployerAnonymous)
-                        {
-                            <div class="text">
-                                <p id="vacancy-employer-description" class="@Model.EmployerDescription.GetPreserveFormattingCssClass()">@(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.EscapeHtmlEncoding(Html, Model.EmployerDescription))</p>
-                            </div>
-                        }
+                        <div class="text">
+                            <p id="vacancy-employer-description" class="@Model.EmployerDescription.GetPreserveFormattingCssClass()">
+                                @HtmlExtensions.EscapeHtmlEncoding(Html, Model.EmployerDescription)
+                            </p>
+                        </div>
                     </div>
                 </div>
                 @if (Model.IsPositiveAboutDisability)
@@ -193,32 +192,47 @@
                         <div class="text">
                             <h3 class="bold-small">Employer</h3>
                             <p id="vacancy-employer-name" class="@(Model.IsWellFormedEmployerWebsiteUrl ? "no-btm-margin" : "")">@Model.EmployerName</p>
-                            @if (Model.IsWellFormedEmployerWebsiteUrl)
+                            @if (Model.IsEmployerAnonymous)
                             {
-                                <p>
-                                    <a itemprop="url" href="@Model.EmployerWebsite"
-                                       id="vacancy-employer-website"
-                                       target="_blank"
-                                       title="@Model.EmployerName Website" rel="external">@Model.EmployerWebsite</a>
-                                </p>
+                                if (Model.VacancyLocationType != ApprenticeshipLocationType.National)
+                                {
+                                    <div id="vacancy-address" itemscope itemtype="http://schema.org/PostalAddress">
+                                        <h3 class="bold-small">Address</h3>
+                                        <div itemprop="address">
+                                            <p class="small-btm-margin" itemprop="addressLocality">@Model.VacancyAddress.Town</p>
+                                        </div>
+                                    </div>
+                                }
                             }
                             else
                             {
-                                <p>@Model.EmployerWebsite</p>
-                            }
-                            @if (Model.VacancyLocationType != ApprenticeshipLocationType.National)
-                            {
-                                <div id="vacancy-address" itemscope itemtype="http://schema.org/PostalAddress">
-                                    <h3 class="bold-small">Address</h3>
-                                    <div itemprop="address">
-                                        <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine1</p>
-                                        <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine2</p>
-                                        <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine3</p>
-                                        <p class="small-btm-margin" itemprop="addressLocality">@Model.VacancyAddress.Town</p>
-                                        <p class="small-btm-margin" itemprop="addressRegion">@Model.VacancyAddress.County</p>
-                                        <p class="small-btm-margin" itemprop="postalCode">@Model.VacancyAddress.Postcode</p>
+                                if (Model.IsWellFormedEmployerWebsiteUrl)
+                                {
+                                    <p>
+                                        <a itemprop="url" href="@Model.EmployerWebsite"
+                                           id="vacancy-employer-website"
+                                           target="_blank"
+                                           title="@Model.EmployerName Website" rel="external">@Model.EmployerWebsite</a>
+                                    </p>
+                                }
+                                else
+                                {
+                                    <p>@Model.EmployerWebsite</p>
+                                }
+                                if (Model.VacancyLocationType != ApprenticeshipLocationType.National)
+                                {
+                                    <div id="vacancy-address" itemscope itemtype="http://schema.org/PostalAddress">
+                                        <h3 class="bold-small">Address</h3>
+                                        <div itemprop="address">
+                                            <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine1</p>
+                                            <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine2</p>
+                                            <p class="small-btm-margin" itemprop="streetAddress">@Model.VacancyAddress.AddressLine3</p>
+                                            <p class="small-btm-margin" itemprop="addressLocality">@Model.VacancyAddress.Town</p>
+                                            <p class="small-btm-margin" itemprop="addressRegion">@Model.VacancyAddress.County</p>
+                                            <p class="small-btm-margin" itemprop="postalCode">@Model.VacancyAddress.Postcode</p>
+                                        </div>
                                     </div>
-                                </div>
+                                }
                             }
                         </div>
                     </div>
@@ -241,60 +255,59 @@
                         <h3 class="bold-small">
                             Additional location information
                         </h3>
-                        <p>@(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.EscapeHtmlEncoding(Html, Model.AdditionalLocationInformation))</p>
+                        <p>@HtmlExtensions.EscapeHtmlEncoding(Html, Model.AdditionalLocationInformation)</p>
                     </div>
                 }
             </div>
         </section>
-    <section class="section-border grid-wrapper" id="provider-info">
-        <h2 class="heading-large">Training provider</h2>
-        @if (Model.IsNasProvider)
-        {
-            <p id="vacancy-nas-provider">Training provider selection is currently in progress</p>
-        }
-        else
-        {
-            <div class="grid grid-2-3">
-                <div class="inner-block-padr">
-                    <div class="text">
-                        @if (!string.IsNullOrWhiteSpace(Model.TrainingToBeProvided))
-                        {
-                            <p id="vacancy-training-to-be-provided" class="@Model.TrainingToBeProvided.GetPreserveFormattingCssClass()">@(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.EscapeHtmlEncoding(Html, Model.TrainingToBeProvided))</p>
-                        }
-                        @if (Model.TrainingType == TrainingType.Standards)
-                        {
-                            <h3 class="heading-small">Apprenticeship standard</h3>
-                        }
-                        else
-                        {
-                            <h3 class="heading-small">Apprenticeship framework</h3>
-                        }
-                        <p id="vacancy-framework">@Html.Raw(Model.SubCategory)</p>
+        <section class="section-border grid-wrapper" id="provider-info">
+            <h2 class="heading-large">Training provider</h2>
+            @if (Model.IsNasProvider)
+            {
+                <p id="vacancy-nas-provider">Training provider selection is currently in progress</p>
+            }
+            else
+            {
+                <div class="grid grid-2-3">
+                    <div class="inner-block-padr">
+                        <div class="text">
+                            @if (!string.IsNullOrWhiteSpace(Model.TrainingToBeProvided))
+                            {
+                                <p id="vacancy-training-to-be-provided" class="@Model.TrainingToBeProvided.GetPreserveFormattingCssClass()">@(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.EscapeHtmlEncoding(Html, Model.TrainingToBeProvided))</p>
+                            }
+                            @if (Model.TrainingType == TrainingType.Standards)
+                            {
+                                <h3 class="heading-small">Apprenticeship standard</h3>
+                            }
+                            else
+                            {
+                                <h3 class="heading-small">Apprenticeship framework</h3>
+                            }
+                            <p id="vacancy-framework">@Html.Raw(Model.SubCategory)</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="grid grid-1-3">
-                <div class="text">
-                    <h3 class="bold-small">Training provider</h3>
-                    <p id="vacancy-provider-name">@Model.ProviderName</p>
+                <div class="grid grid-1-3">
+                    <div class="text">
+                        <h3 class="bold-small">Training provider</h3>
+                        <p id="vacancy-provider-name">@Model.ProviderName</p>
 
-                    @if (!Model.IsRecruitmentAgencyAnonymous && !string.IsNullOrWhiteSpace(Model.RecruitmentAgency))
+                        @if (!Model.IsRecruitmentAgencyAnonymous && !string.IsNullOrWhiteSpace(Model.RecruitmentAgency))
+                        {
+                            <p id="recruitment-agency-name">Applications for this apprenticeship are being processed by @Model.RecruitmentAgency</p>
+                        }
+                    </div>
+
+                    @if (!string.IsNullOrWhiteSpace(Model.Contact))
                     {
-                        <p id="recruitment-agency-name">Applications for this apprenticeship are being processed by @Model.RecruitmentAgency</p>
+                        <div class="text">
+                            <h3 class="bold-small">Contact</h3>
+                            <p id="vacancy-provider-contact" class="@Model.Contact.GetPreserveFormattingCssClass()">@Model.Contact</p>
+                        </div>
                     }
                 </div>
-
-                @if (!string.IsNullOrWhiteSpace(Model.Contact))
-                {
-                    <div class="text">
-                        <h3 class="bold-small">Contact</h3>
-                        <p id="vacancy-provider-contact" class="@Model.Contact.GetPreserveFormattingCssClass()">@Model.Contact</p>
-                    </div>
-                }
-            </div>
-        }
-    </section>
-
+            }
+        </section>
         if (!string.IsNullOrWhiteSpace(Model.OtherInformation))
         {
             <section id="other-information" class="section-border">
@@ -306,9 +319,8 @@
                 </div>
             </section>
         }
-
         if (Model.ApplyViaEmployerWebsite && !string.IsNullOrWhiteSpace(Model.ApplicationInstructions))
-        {      
+        {
             <section id="application-instructions-container" class="section-border">
                 <h2 class="heading-large">Employer's Application Instructions</h2>
                 <div class="text">
@@ -316,7 +328,6 @@
                 </div>
             </section>
         }
-        
         if (!Model.ApplyViaEmployerWebsite && !Request.IsAuthenticated)
         {
             <section id="before-apply">
@@ -326,10 +337,9 @@
                 </div>
             </section>
         }
-
         <section>
             <div class="form-group">
-                @Html.Partial("_Apply", Model, new ViewDataDictionary() { new KeyValuePair<string, object>("AnalyticsButtonPosition", "Bottom")})
+                @Html.Partial("_Apply", Model, new ViewDataDictionary() {new KeyValuePair<string, object>("AnalyticsButtonPosition", "Bottom")})
             </div>
         </section>
     }
