--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/SettingsError.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/SettingsError.cshtml
@@ -7,5 +7,5 @@
 <h1 class="heading-xlarge">Error while signing up</h1>
 
 <p>
-    Unfortunately there has been an error when signing up for the service. Please review the above message and contact helpdesk
+    Unfortunately there has been an error when signing up for the service. Please review the above message and contact helpdesk if necessary
 </p>
